--- a/theme.conf
+++ b/theme.conf
@@ -3,8 +3,8 @@
 # Set the name of a subdirectory in which icons are stored.
 icons_dir themes/darkmini/icons
 
-# You background!
-banner themes/darkmini/bg/ubuntu_two.png
+# Your background!
+banner themes/darkmini/bg/fishies.png
 
 # Custom images for the selection background.
 selection_big   themes/darkmini/selection_big.png
